--- a/src/main/resources/items.yml
+++ b/src/main/resources/items.yml
@@ -1,13 +1,12 @@
 # This file configuration stores all the items and their behaviours.
 # Every item has a specific utility and usage, and it can be defined with some booleans (see below).
 
+# item-id: The unique custom id.
 # item-name: The name of the item.
 # item-description: The description of the item.
-# item-id: The unique custom id.
+
 # item-minecraft-id: The minecraft id of the item.
-
 # item-data-model-id: The id of the data model of the item.
-
 # custom-block-id: Let the system know that this item is a custom block too.
 
 # is-usable: If true, the item can be used to consume other items.
@@ -28,7 +27,7 @@
 #
 
 enabled-items:
-  - geiger-counter
+  - geiger
   - radiation-inhibitor
   - gas-mask
   - gas-mask-filter
@@ -38,11 +37,15 @@ enabled-items:
 # ITEMS
 #------------------------------------------------------------------------------
 geiger:
+  item-id: 1
   item-name: Geiger Counter
-  item-description: A Geiger counter.
-  item-id: 349
+  item-description: This item measures the radiation levels
+  item-minecraft-id: COMPASS
   item-data-model-id: 1
-  is-geiger: true
-  functionality: geiger-counter
+  is-usable: true
+  is-equipable: true
+  is-droppable: true
+  max-stack-size: 1
+  is-transportable: true
 
 
