--- a/src/main/resources/items.yml
+++ b/src/main/resources/items.yml
@@ -38,8 +38,8 @@ enabled-items:
 #------------------------------------------------------------------------------
 geiger:
   item-id: 1
-  item-name: Geiger Counter
-  item-description: This item measures the radiation levels
+  item-name: "&#cbfb09G&#cff408e&#d3ed08i&#d8e607g&#dcdf06e&#e0d805r &#e4d105C&#e8ca04o&#ecc303u&#f1bc02n&#f5b502t&#f9ae01e&#fda700r"
+  item-description: "&eThis item measures the radiation levels"
   item-minecraft-id: COMPASS
   item-data-model-id: 1
   is-usable: true
