--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,13 +1,19 @@
 name: NuclearCraft
 version: '${project.version}'
 main: com.enderryno.nuclearcraft.NuclearCraft
-api-version: 1.18
+api-version: 1.19
 authors: [ Rynoooo, Corvinoo ]
 description: A plugin that adds nuclear energy, along with his advantages and dangers
 website: http://rynotechblog.altervista.org/
+depend: [WorldGuard, WorldEdit, Vault, ProtocolLib]
 commands:
   ncgive:
     description: Give a nuclear craft item
     permission: nuclearcraft.admin
     permission-message: You do not have permission!
     usage: /<command> [id]
+  ncirradiatezone:
+    description: Irradiate a zone
+    permission: nuclearcraft.admin
+    permission-message: You do not have permission!
+    usage: /<command> [x] [y] [z] [radius]
