--- a/pom.xml
+++ b/pom.xml
@@ -88,5 +88,10 @@
             <version>7.0.8-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.40.1.0</version>
+        </dependency>
     </dependencies>
 </project>
