--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -17,3 +17,8 @@ commands:
     permission: nuclearcraft.admin
     permission-message: You do not have permission!
     usage: /<command> [x] [y] [z] [radius]
+  ncspawnmushroom:
+    description: Spawn a mushroom
+    permission: nuclearcraft.admin
+    permission-message: You do not have permission!
+    usage: /<command> [x] [y] [z] [radius]
