--- a/src/main/resources/items.yml
+++ b/src/main/resources/items.yml
@@ -25,12 +25,14 @@
 # radiation_inhibitor | The item is a radiation inhibitor (slows the rad/s).
 # gas_mask | The item is a gas mask.
 # gas_mask_filter | The item is a gas mask filter.
+# wrench | The item is a wrench.
 
 enabled-items:
   - geiger
 #  - radiation-inhibitor
 #  - gas-mask
 #  - gas-mask-filter
+  - wrench
   - bomb-casing
   - bomb-core
   - bomb-interface
@@ -50,6 +52,18 @@ geiger:
   max-stack-size: 1
   is-transportable: true
   behaviour: "geiger_counter"
+
+wrench:
+    item-name: "Wrench"
+    item-description: "&eUsed to assemble structures"
+    item-minecraft-id:
+    item-data-model-id: 2
+    is-usable: true
+    is-equipable: true
+    is-droppable: true
+    max-stack-size: 1
+    is-transportable: true
+    behaviour: "wrench"
 
 #------------------------------------------------------------------------------
 # BLOCK ITEMS
