--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.EnderRyno</groupId>
+    <groupId>com.mochibit</groupId>
     <artifactId>NuclearCraft</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
@@ -13,9 +13,12 @@
 
     <description>A plugin that adds nuclear energy, along with his advantages and dangers</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <kotlin.version>1.8.21</kotlin.version>
+        <kotlin.version>1.9.22</kotlin.version>
+        <kotlin.jvm.target>21</kotlin.jvm.target>
+        <kotlin.language.version>2.0</kotlin.language.version>
+        <kotlin.api.version>2.0</kotlin.api.version>
     </properties>
     <url>http://rynotechblog.altervista.org/</url>
 
@@ -37,7 +40,7 @@
                             <relocations>
                                 <relocation>
                                     <pattern>com.jeff_media.customblockdata</pattern>
-                                    <shadedPattern>com.enderryno.nuclearcraft.api.customblockdata</shadedPattern>
+                                    <shadedPattern>com.mochibit.nuclearcraft.api.customblockdata</shadedPattern>
                                 </relocation>
                             </relocations>
                         </configuration>
@@ -71,7 +74,9 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <jvmTarget>1.8</jvmTarget>
+                    <jvmTarget>${kotlin.jvm.target}</jvmTarget>
+                    <apiVersion>${kotlin.api.version}</apiVersion>
+                    <languageVersion>${kotlin.language.version}</languageVersion>
                 </configuration>
             </plugin>
             <plugin>
@@ -154,7 +159,7 @@
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
-            <version>3.40.1.0</version>
+            <version>3.41.2.2</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
