Another try for maven auto build

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,10 @@
     </properties>
     <url>http://rynotechblog.altervista.org/</url>
 
+    <scm>
+        <developerConnection>scm:git:https://github.com/bitmochibit/NuclearCraft.git</developerConnection>
+    </scm>
+
     <build>
         <plugins>
             <plugin>
