--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,14 @@
         <developerConnection>scm:git:https://github.com/bitmochibit/NuclearCraft.git</developerConnection>
     </scm>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub</name>
+            <url>https://maven.pkg.github.com/bitmochibit/NuclearCraft.git</url>
+        </repository>
+    </distributionManagement>
+
     <build>
         <plugins>
             <plugin>
