--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.mochibit</groupId>
     <artifactId>NuclearCraft</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.3-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>NuclearCraft</name>
@@ -32,6 +32,11 @@
             <name>GitHub</name>
             <url>https://maven.pkg.github.com/bitmochibit/NuclearCraft</url>
         </repository>
+        <snapshotRepository>
+            <id>github</id>
+            <name>GitHub</name>
+            <url>https://maven.pkg.github.com/bitmochibit/NuclearCraft</url>
+        </snapshotRepository>
     </distributionManagement>
 
     <build>
