--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
     </distributionManagement>
 
     <build>
+        <finalName>NuclearCraft</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
