--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,10 @@
                 <configuration>
                     <relocations>
                         <relocation>
+                            <pattern>io.papermc.lib</pattern>
+                            <shadedPattern>com.mochibit.defcon.api.paperlib</shadedPattern>
+                        </relocation>
+                        <relocation>
                             <pattern>com.jeff_media.customblockdata</pattern>
                             <shadedPattern>com.mochibit.defcon.api.customblockdata</shadedPattern>
                         </relocation>
@@ -170,6 +174,10 @@
             <url>https://repo.papermc.io/repository/maven-public/</url>
         </repository>
         <repository>
+            <id>papermc</id>
+            <url>https://papermc.io/repo/repository/maven-public/</url>
+        </repository>
+        <repository>
             <id>sonatype</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
@@ -190,6 +198,12 @@
             <artifactId>paper-api</artifactId>
             <version>1.19.3-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.papermc</groupId>
+            <artifactId>paperlib</artifactId>
+            <version>1.0.7</version>
+            <scope>compile</scope>
         </dependency>
         <!--Spigot API -->
         <dependency>
@@ -215,11 +229,6 @@
             <artifactId>worldguard-bukkit</artifactId>
             <version>7.0.8-SNAPSHOT</version>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.xerial</groupId>
-            <artifactId>sqlite-jdbc</artifactId>
-            <version>3.41.2.2</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
