--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: Defcon
-version: '${project.version}'
+version: "${version}"
 main: me.mochibit.defcon.Defcon
 api-version: 1.19
 authors: [ Rynoooo, Corvinoo ]
