feat(core): Auto resource pack installer
Made an effective resource pack installer so that is no longer manual (it's optional so that you can use a custom version of the pack)
The port for the hosting service is configurable

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,3 +3,6 @@
 pack_format_fallback:
   resource_pack: 46
   data_pack: 71
+
+# Resource pack server port, this is the port that the server will use to serve the resource pack
+resource_pack_server_port: 8000
